Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-47687

[Magma] VBucket::commit (vb:571) failed as no pending HashTable item found with key:<ud>cid:0x0:84YhI-933428

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 7.1.0
    • 7.1.0
    • storage-engine
    • 7.1.0-1110
    • Untriaged
    • 1
    • Unknown
    • Magma-Aug-9-2021, Magma-Aug-16-2021, Magma 2021-Aug-23, Magma 2021-Sep-6, Magma May 2022

    Description

      Test and logs are same as in MB-47686

      This error is seen on node: 172.23.122.245

      2021-08-02T01:04:33.826955-07:00 ERROR (default) VBucket::commit (vb:571) failed as no pending HashTable item found with key:<ud>cid:0x0:84YhI-933428</ud>, committed item:[seqno:12514, isDeleted:false, isResident:true, cas:1627890391216881665], prepare_seqno:22878, commit_seqno:22889, IsDiskSnapshot:false, snapshotInfo:start:22888, range:{22888,22899}, HS:22888, HPS:22888, HCS:22876
      

      Attachments

        Issue Links

          For Gerrit Dashboard: MB-47687
          # Subject Branch Project Status CR V

          Activity

            People

              apaar.gupta Apaar Gupta
              ritesh.agarwal Ritesh Agarwal
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty