MB-47687: Add highSeqno to magma UserStats

This patch records highSeqno of the snapshot in
UserStats.

Magma rollback callback iterates from rollback seqno
to highSeqno. If the tombstone/prepare/collection has
been purged, the doc being rolled back will be missing
from the rollback callback. We store highSeqno in
UserStats and retrieve it from from Magma's oldest
checkpoint. This oldest rollbackable highSeqno will be
used to prevent purge of docs that can be rolled back.

Change-Id: I8b4df4318c4f3d118830786e21c55ab4065d7f9e
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/160122
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Ben Huddleston <ben.huddleston@couchbase.com>